tests/NormalTests/paczka1/fuzzy1/75123458.err
Error in line 3: A938 A629 94,5
Error in line 26: FnVd A629 1,4
Error in line 29: SEG A240 60,1
